--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,10 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
+
+        <activity android:name=".splashscreen.LogInActivity"
+            android:theme="@style/actionbar"/>
 
         <activity android:name=".splashscreen.SplashScreen"
             android:label="@string/app_name"
