--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".splashscreen.SplashScreen"
+        <activity android:name=".splashscreen.SplashScreenActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,7 +20,8 @@
         </activity>
 
         <activity
-            android:name=".splashscreen.PaginationLayout"
+            android:name=".splashscreen.PaginationLayoutActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:label="@string/app_name" >
         </activity>
     </application>
